--- a/Biscuit/index.html
+++ b/Biscuit/index.html
@@ -10,5 +10,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/preset-confetti@3/tsparticles.preset.confetti.bundle.min.js"></script>
+
   </body>
 </html>
